fix text alignment

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -27,7 +27,7 @@ h1 {
   font-size: 2.3em;
   line-height: 1.5em;
   margin-bottom: 1em;
-  margin-top: 1em;
+  /* margin-top: 1em; */
 }
 h2,
 blockquote {
